[metadata]
name = cisco_wlc_api
version = 0.0.1
author = Matthew Connelly
author_email = pythonpkgs@maff.im
description = A reverse-engineered API client for the Cisco WLC web interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maffsie/py-cisco_wlc_api
project_urls =
	Bug Tracker = https://github.com/maffsie/py-cisco_wlc_api/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src